# rust-quickstart-code

./: Cargo.toml  README.md
01_quickstart_crud/: Cargo.toml
01_quickstart_crud/src/: main.rs
02_quickstart_aggregation/: Cargo.toml  Makefile
02_quickstart_aggregation/src/: main.rs
src/: main.rs
