[package]
name = "rust_quickstart"
version = "0.0.1"
authors = ["Mark Smith <mark.smith@mongodb.com>"]
edition = "2018"

[dependencies]
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver.git", default-features = false, features=["async-std-runtime"] }
bson = "0.14.0"
chrono = "0.4.11"
serde = "1.0.105"
async-std = { version = "1.5.0", features = ["attributes"] }